# CRM_prototype_EPIC_EVENTS

./: .env  README.md  main.py  pyproject.toml
src/cli/: cli_command.py
src/config/: sentry.py
src/controllers/: contract_controller.py  customer_controller.py  event_controller.py  session_controller.py  user_controller.py
src/domain/: domain_models.py  model_mapper.py
src/infrastructure/: database.py  reset_db.py
src/migrations/: 001_init.py  003_db_tables_modification.py  004_make_event_fields_nullable.py  005_make_support_contact_nullable.py  006_drop_unique_event_contract.py  007_drop_constraint_contract_id_in_eventmodel.py  008_make_support_contact_nullable_test_2.py  009_make_support_contact_nullable_test_3.py  010_delete_contract_and_event_on_cascade.py  011_make_customer_informations_nullable.py  conf.py
src/models/: peewee_models.py
src/repository/: operation_repository.py  peewee_operation_repository.py
src/security/: password_service.py  token_service.py
src/services/: authorization_service.py  contract_service.py  customer_service.py  event_service.py  session_service.py  user_service.py
src/tests/: conftest.py
src/tests/functional/: conftest.py  test_functional_user.py
src/tests/integration/: conftest.py  test_integration_contract.py  test_integration_customer.py  test_integration_event.py  test_integration_user.py
src/tests/unit/: conftest.py  test_token_service.py  test_unit_contract.py  test_unit_customer.py  test_unit_event.py  test_unit_permissions.py  test_unit_user_.py
