[project]
name = "crm-epic-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "attrs==26.1.0",
    "black==26.3.1",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "click==8.3.1",
    "iniconfig==2.3.0",
    "mypy-extensions==1.1.0",
    "packaging==26.0",
    "passlib==1.7.4",
    "pathspec==1.1.1",
    "peewee==3.19.0",
    "peewee-migrate==1.14.3",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pycparser==3.0",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "pytokens==0.4.1",
    "sentry-sdk==2.58.0",
    "urllib3==2.6.3",
]
